force-app/main/default/objects/User/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>