force-app/main/default/objects/User/fields/Price_Limit__c.field-meta.xml
<CustomField>
    <fullName>Price_Limit__c</fullName>
    <label>Price Limit</label>
    <relationshipName>price_limit</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>