force-app/main/default/objects/User/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <defaultValue>IF( $UserRole.Name  = &#39;NCE Manager&#39; || $UserRole.Name  = &#39;NCE Regional Managers&#39; || $UserRole.Name  = &#39;NCE Traders&#39;, &#39;NCE&#39;, &#39;Hevea Global&#39;)</defaultValue>
    <label>User Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hevea Global</fullName>
            </value>
            <value>
                <fullName>NCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>