force-app/main/default/objects/User/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <formula>Contact.Account.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Type</label>
    <type>Text</type>
</CustomField>